# neor

./: Cargo.toml  README.md  example-dotenv  style.css
db/: scheme.sql
partials/: comment.html  nav.html  post_preview.html  test.html
src/: main.rs  session.rs  theme.rs
src/apis/: email_verification.rs  mod.rs  password_change.rs  password_reset.rs  sign_in.rs  sign_up.rs
src/apis/comment/: anonymise.rs  create.rs  delete.rs  edit.rs  mod.rs
src/apis/post/: anonymise.rs  create.rs  delete.rs  edit.rs
src/apis/user/: admin.rs  edit.rs  mod.rs
src/db/: mod.rs
src/pages/: email_verification.rs  files.rs  index.rs  mod.rs  not_found.rs  password_change.rs  password_reset.rs  sign_in.rs  sign_out.rs  sign_up.rs  style.rs  switch_theme.rs
src/pages/comment/: create.rs  mod.rs
src/pages/post/: create.rs
src/pages/tag/: tag.rs
src/types/: mod.rs  page.rs
src/types/comment/: content.rs  mod.rs  reply.rs
src/types/post/: content.rs  description.rs  mod.rs  tags.rs  title.rs
src/types/user/: code.rs  email.rs  hashed_password.rs  mod.rs  name.rs  password.rs  password_pair.rs  role.rs  session.rs  username.rs
templates/: email-verification.html  index.html  not_found.html  password-change.html  password-reset.html  sign-in.html  sign-up.html
templates/comment/: create.html
templates/comment/id/: anonymise.html  delete.html  edit.html
templates/post/: create.html  id.html
templates/post/id/: anonymise.html  delete.html  edit.html
templates/tag/: tag.html
templates/user/: username.html
templates/user/username/: admin.html  comments.html  (+2 more)
(+11 files in other folders)
